Helm/easy-core/charts/envoy/files/envoy.yaml
static_resources:
  listeners:
  - name: listener_https
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: "/etc/envoy/tls/tls.crt"
              private_key:
                filename: "/etc/envoy/tls/tls.key"
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match: { prefix: "/login" }
                route: { cluster: api-service }
              - match: { prefix: "/register" }
                route: { cluster: api-service }
              - match: { prefix: "/categories" }
                route: { cluster: api-service }
              - match: { prefix: "/orders" }
                route: { cluster: api-service }
              - match: { prefix: "/products" }
                route: { cluster: api-service }
              - match: { prefix: "/profile" }
                route: { cluster: api-service }
              - match: { prefix: "/cart" }
                route: { cluster: api-service }
              - match: { prefix: "/" }
                route: { cluster: spa-service }
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: api-service
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: api-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: easy-api-service.default.svc.cluster.local
                port_value: 8080
  - name: spa-service
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: spa-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: easy-spa-service.default.svc.cluster.local
                port_value: 80
